--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.7
+  hive: 2.2.3
+  hive_flutter: 1.1.0
+  get: 4.6.6
   google_fonts: ^6.1.0
 
 
@@ -17,6 +20,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  hive_generator: 2.0.1
+  build_runner: 2.4.6
 flutter:
   uses-material-design: true
   assets:
