--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   hive_flutter: 1.1.0
   get: 4.6.6
   google_fonts: ^6.1.0
-
+  dio: 5.7.0
+  path_provider: 2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +23,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   hive_generator: 2.0.1
   build_runner: 2.4.6
+
 flutter:
   uses-material-design: true
   assets:
