--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_fonts: ^6.1.0
   dio: 5.7.0
   path_provider: 2.1.1
+  pull_to_refresh_flutter3: ^2.0.2
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
